--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 		Number:
 		<input type="text" id="n1">
 		<p>
-			<button onclick="inverse()"> 1/x </button>
 			<button onclick="square()"> x^2 </button>
-            <button onclick="cube()"> x^3 </button>
-            <button onclick="sine()"> sin </button>
+			<button onclick="cube()"> x^3 </button>
+			<button onclick="power_4()"> x^4</button>
+			<button onclick="sine()"> sin </button>
+			<button onclick="inverse()"> 1/x </button>
 		</p>
 		<script type="text/javascript">
 			function cube() {
@@ -30,6 +31,10 @@
 			function inverse() {
 				var num = document.getElementById("n1");
 				num.value = 1/num.value;
+			}
+			function power_4() {
+				var num = document.getElementById("n1");
+				num.value = Math.pow(num.value, 4);
 			}
 		</script>
 	</body>
